--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "firebase-admin": "^13.6.0",
+    "framer-motion": "^12.23.24",
     "mongodb": "^7.0.0"
   }
 }
